<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddressLocateActivity">


    <RelativeLayout
        android:id="@+id/rel_1_ad_create_ac_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:src="@drawable/back_arrow_2" />
        </LinearLayout>

        <com.jpdas.orgodev.Fonts.WorkSansRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Address"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_lay_ad_create_ac_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_1_ad_create_ac_toolbar"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <com.jpdas.orgodev.Fonts.WorkSansBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_current_location_bg"
            android:drawableLeft="@drawable/current_location_dr"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingBottom="8dp"
            android:text=" Use Your Current Location"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_ad_create_ac_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_lay_ad_create_ac_1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:weightSum="9">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="4"
            android:layerType="software"
            android:src="@drawable/dashed_line" />

        <com.jpdas.orgodev.Fonts.WorkSansBold
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="OR"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="4"
            android:layerType="software"
            android:src="@drawable/dashed_line" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_lay_ad_create_ac_2"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <com.jpdas.orgodev.Fonts.WorkSansBold
            android:id="@+id/enter_loc_ad_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Location Manually"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/lin_lay_ad_create_ac_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_loc_ad_man"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/search_address_bg"
            android:elevation="3dp"
            android:focusableInTouchMode="true">

            <com.jpdas.orgodev.UtilsCustomizationUI.AutoCompleteTextCustom
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/search_icon_grey"
                android:drawablePadding="8dp"
                android:hint="Search by popular places near you"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="12sp" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_ad_create_ac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lin_lay_ad_create_ac_3"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_ad_create_ac_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/location_dr" />

                <View
                    android:id="@+id/view_1_ad_create_ac_1"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_toRightOf="@+id/iv_ad_create_ac_1"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@+id/view_1_ad_create_ac_1"
                    android:orientation="vertical">

                    <com.jpdas.orgodev.Fonts.WorkSansSemiBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="Address Title with Address Subtitle from selection"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="12sp" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/card_view_ad_create_ac">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ob_3" />

                    <com.jpdas.orgodev.Fonts.WorkSansLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/in_search_option_try_searching_for_popular_landmarks_near_your_address_like_hospitals_petrol_pumps_schools_buildings_etc" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/search_address_bg"
                        android:elevation="3dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="4dp">

                        <com.jpdas.orgodev.UtilsCustomizationUI.EditTextCustomizationBold
                            android:id="@+id/input_flat_no_building_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="8dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/flat_no_building_name"
                            android:inputType="textPostalAddress"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:paddingRight="8dp"
                            android:textCursorDrawable="@drawable/black_cursor_color"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="3"
                            android:background="@drawable/search_address_bg"
                            android:elevation="3dp"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="4dp">

                            <com.jpdas.orgodev.UtilsCustomizationUI.EditTextCustomizationBold
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="8dp"
                                android:background="@android:color/transparent"
                                android:hint="@string/landmark"
                                android:inputType="textPostalAddress"
                                android:paddingLeft="8dp"
                                android:paddingTop="4dp"
                                android:paddingRight="8dp"
                                android:textCursorDrawable="@drawable/black_cursor_color"
                                android:textSize="12sp" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="2"
                            android:background="@drawable/search_address_bg"
                            android:elevation="3dp"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="4dp">

                            <com.jpdas.orgodev.UtilsCustomizationUI.EditTextCustomizationBold
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="8dp"
                                android:background="@android:color/transparent"
                                android:hint="@string/postal_code"
                                android:inputType="textPostalAddress"
                                android:paddingLeft="8dp"
                                android:paddingTop="4dp"
                                android:paddingRight="8dp"
                                android:textCursorDrawable="@drawable/black_cursor_color"
                                android:textSize="12sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_save_address_create_ac"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="30dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="10dp"
                        android:text="@string/save_address"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@drawable/save_address_btn_bg"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:drawableRight="@drawable/next_dr_short"
                        android:drawablePadding="8dp"
                        android:textAllCaps="false"
                        android:layout_marginBottom="8dp"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>

</RelativeLayout>